trustfall_core/test_data/tests/valid_queries/typename_output.graphql-parsed.ron
Ok(TestParsedGraphQLQuery(
  schema_name: "numbers",
  query: Query(
    root_connection: FieldConnection(
      position: Pos(
        line: 3,
        column: 5,
      ),
      name: "Zero",
    ),
    root_field: FieldNode(
      position: Pos(
        line: 3,
        column: 5,
      ),
      name: "Zero",
      connections: [
        (FieldConnection(
          position: Pos(
            line: 4,
            column: 9,
          ),
          name: "__typename",
        ), FieldNode(
          position: Pos(
            line: 4,
            column: 9,
          ),
          name: "__typename",
          output: [
            OutputDirective(),
          ],
        )),
      ],
    ),
  ),
))
