trustfall_core/test_data/tests/parse_errors/output_name_with_spaces.parse-error.ron
Err(InvalidOutputName("name with spaces", [
  ' ',
], Pos(
  line: 4,
  column: 28,
)))
